Fixed menu z-index issue on white slider foto loading. Also changed slider hider height to 900 on parent theme so that it doesn't show photo details below loading photos

--- a/themes/white_slider/lesscss/inc/main_slider.less
+++ b/themes/white_slider/lesscss/inc/main_slider.less
@@ -25,7 +25,7 @@
 }
 #entire_slider_hider {
 	width: 100%;
-	height: 600px;
+	height: 900px;
 	position: absolute;
 	top: 100px;
 /*	outline: 1px solid black;*/
